welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:6: error: not found: value ture
    return ture
           ^