welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (100-Math.abs(n)<= 10){
    return true
  }
  else if (200-Math.abs(n)<= 10){
    return ture
  }
  else {
    return false
  }
}